--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+    text-decoration: none;
+
+}
+
+.flex {
+    display: flex;
+    flex-direction: var(--flex-dir);
+}
+.flex-row{
+    --flex-dir: row ;
+}
+.flex-col{
+    --flex-dir: column;
+}
+
+.flex-center{
+    justify-content: center;
+    align-items: center;
+}
+.center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-group{
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.logo-name-row{
+    align-items: center;
+}
