--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #FAFAFA 0% 0% no-repeat padding-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 code {
@@ -14,7 +16,6 @@ code {
 
 a {
     text-decoration: none;
-
 }
 
 .flex {
@@ -32,6 +33,7 @@ a {
     justify-content: center;
     align-items: center;
 }
+
 .center{
     display: flex;
     flex-direction: column;
@@ -43,8 +45,41 @@ a {
     display:flex;
     flex-direction: column;
     width: 100%;
+    font: normal normal normal 13px/25px Roboto;
+}
+.label, .form-group label{
+    letter-spacing: 0px;
+    color: #ED184B;
+    opacity: 1;
+}
+.form-group input{
+    width: 326px;
+    height: 50px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #ED184B5C;
+    border-radius: 16px;
+    opacity: 1;
+}
+.form-group input:focus{
+    border-color: #ED184B;
 }
 
 .logo-name-row{
     align-items: center;
+}
+
+.btn-cbi{
+    width: 326px;
+    height: 50px;
+    /* UI Properties */
+    background: #ED184B 0% 0% no-repeat padding-box;
+    border-radius: 34px;
+    opacity: 1;
+    border-color: transparent;
+    color:#FFFFFFDE;
+    cursor: pointer;
+}
+
+.btn-wrapper{
+    gap: 3;
 }
