--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root{
+    --cbi-primary: #ED184B;
+}
 body {
     box-sizing: border-box;
     margin: 0;
@@ -32,15 +35,6 @@ a {
     justify-content: center;
     align-items: center;
 }
-
-.center{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-}
-
 .form-group{
     display:flex;
     flex-direction: column;
@@ -49,8 +43,11 @@ a {
 }
 .label, .form-group label{
     letter-spacing: 0px;
-    color: #ED184B;
+    color: var(--cbi-primary);
     opacity: 1;
+}
+.label{
+    font-size: 13px;
 }
 .form-group input{
     height: 50px;
@@ -64,28 +61,70 @@ a {
     outline: none;
 }
 
-.logo-name-row{
-    align-items: center;
-}
-.logo-wrapper{
+.bottom-cbi-text, .logo-wrapper{
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
-.btn-cbi{
-    width: 100%;
-    height: 50px;
-    /* UI Properties */
-    background: #ED184B 0% 0% no-repeat padding-box;
-    border-radius: 34px;
-    border-color: transparent;
-    color:#FFFFFFDE;
-    cursor: pointer;
-}
-.btn-cbi:disabled{
-    opacity: 0.8;
-    cursor: default;
-}
+
 .btn-wrapper{
     width: 100%;
     gap: 1.2rem;
+}
+.dropdown-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    border: none;
+    color: #fff;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+.dropdown-button::after{
+    content: '';
+    position: absolute;
+    color:#b0b7c0;
+    right: 10%;
+    top:50%;
+    transform: translateY(-50%);
+
+}
+.dropdown-button:after {
+    border-top: 5px solid #fff;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
+
+.caret-rotate{
+    transform: rotate(270deg);
+}
+
+.dropdown-menu{
+    position: absolute;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 92px;
+    top:3.8em;
+    right: 0;
+    list-style: none;
+    color:white;
+    border-radius: 12px;
+    box-shadow: 0px 3px 6px #00000029;
+    background-color: var(--cbi-primary);
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:0.5em;
+    overflow: hidden;
+}
+
+.opts{
+    padding:5px;
+    width: 100%;
+}
+
+.opts:hover{
+    opacity: 0.8;
+
 }
