--- a/src/index.css
+++ b/src/index.css
@@ -79,19 +79,17 @@ a {
     display: inline-block;
     cursor: pointer;
 }
-.dropdown-button::after{
-    content: '';
+.caret {
+    z-index: 6;
     position: absolute;
-    color:#b0b7c0;
+    color:#2065be;
     right: 10%;
     top:50%;
-    transform: translateY(-50%);
-
-}
-.dropdown-button:after {
-    border-top: 5px solid #fff;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
+    transform: translateY(-49%);
+    border-top: 6px solid #fff;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    cursor: default;
 }
 
 .caret-rotate{
@@ -102,11 +100,10 @@ a {
     position: absolute;
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 0.5rem;
     width: 92px;
-    top:3.8em;
+    top:3.2rem;
     right: 0;
-    list-style: none;
     color:white;
     border-radius: 12px;
     box-shadow: 0px 3px 6px #00000029;
@@ -115,11 +112,13 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap:0.5em;
+    gap:0.3em;
     overflow: hidden;
+    cursor: default;
 }
 
 .opts{
+    text-align: center;
     padding:5px;
     width: 100%;
 }
@@ -127,4 +126,7 @@ a {
 .opts:hover{
     opacity: 0.8;
 
+}
+.hide{
+    display: none;
 }
