--- a/src/static/cbi-style.css
+++ b/src/static/cbi-style.css
@@ -1,8 +1,10 @@
+
 .app-container{
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    --cbi-primary: #ED184B;
 }
 
 .bottom-cbi-text{
