--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,11 @@ a {
 .hide{
     display: none;
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
